<resources>
    <string name="app_name">trinity-wizards-test</string>
    <string name="contact">Contact</string>
    <string name="save">Save</string>
    <string name="main_information">Main Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sub_information">Sub Information</string>
    <string name="email">Email</string>
    <string name="dob">DOB</string>
</resources>